[workspace]

members = [
    "closures",
    "communicator",
    "control-flow",
    "enums",
    "errors",
    "functions",
    "formatting",
    "generics",
    "guess",
    "hash-maps",
    "hello-world",
    "helpful-crates",
    "iterators",
    "koans",
    "methods",
    "minigrep",
    "minimum-number-in-list",
    "privacy",
    "recoverable-errors",
    "slices",
    "strings",
    "structs",
    "testing",
    "types",
    "variables",
    "vectors",
    "smart-pointers",
    "concurrency",
    "mutexes",
    "patterns",
    "unsafe_rust",
    "web_server",
]
